seting z-index bug patch

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -144,67 +144,71 @@ body {
     }
   }
 
-  .settings-container {
-    background: $dark-grey;
-    color: white;
-    width: calc(100vw + 1rem);
-    transform: translateX(-1rem);
+  .settings-modal {
+    z-index: 9999999;
 
-    .settings-header {
-      position: fixed;
-      top: 0;
+    .settings-container {
       background: $dark-grey;
-      width: 100%;
-      padding: 1rem;
-      z-index: 99999;
-      border-bottom: solid 1px rgba(255,255,255, 0.15);
-      
-      h3 {
-        margin: 0;
-      }
-
-      .settings-close {
-        color: white;
-        position: absolute;
-        top: 0.25rem;
-        right: 1rem;
-      }
-    }
-
-    .settings-form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem 0;
-      height: 100vh;
-      width: 100%;
-      overflow: scroll;
-      padding: 4rem 1rem 1rem;
-    }
-
-    .settings-input-group {
-      display: flex;
-      flex-direction: column;
-
-      h4 {
-        background: rgba(255,255,255, 0.05);
-        padding: 0.5rem 1rem;
-        border-radius: 4px;
-      }
-
-      .settings-input {
-        padding: 0 1rem;
-
-        &.select {
-          margin: 1.5rem 0 0.5rem;
-        }
-      
-        * {
-          color: white;
-          border-color: white;
+      color: white;
+      width: calc(100vw + 1rem);
+      transform: translateX(-1rem);
+  
+      .settings-header {
+        position: fixed;
+        top: 0;
+        background: $dark-grey;
+        width: 100%;
+        padding: 1rem;
+        z-index: 99999;
+        border-bottom: solid 1px rgba(255,255,255, 0.15);
+        
+        h3 {
+          margin: 0;
         }
   
-        .MuiSwitch-track {
-          border: solid 1px white;
+        .settings-close {
+          color: white;
+          position: absolute;
+          top: 0.25rem;
+          right: 1rem;
+        }
+      }
+  
+      .settings-form {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem 0;
+        height: 100vh;
+        width: 100%;
+        overflow: scroll;
+        padding: 4rem 1rem 1rem;
+      }
+  
+      .settings-input-group {
+        display: flex;
+        flex-direction: column;
+  
+        h4 {
+          background: rgba(255,255,255, 0.05);
+          padding: 0.5rem 1rem;
+          border-radius: 4px;
+        }
+  
+        .settings-input {
+          padding: 0 1rem;
+  
+          &.select {
+            margin: 1.5rem 0 0.5rem;
+          }
+        
+          * {
+            color: white;
+            border-color: white;
+          }
+    
+          .MuiSwitch-track {
+            border: solid 1px white;
+          }
         }
       }
     }
